# pytest_proj_homework

./: pyproject.toml
tests/: test_arrs.py
utils/: arrs.py
