[tool.poetry]
name = "pytest-proj"
version = "0.1.0"
description = ""
authors = ["Mariam Tamrazyan <mart76901@gmail.com>"]
readme = "README.md"
packages = [{include = "pytest_proj"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
